# wordy

./: .dockerignore  .gitattributes  README.md  cobination_cases.py  game_play_simulation.py  initial_resource.py  initial_words_prob.py  main.py  match_cases.py  pyproject.toml  score_calculator.py  script_initial_words_prob.py  solve_wordle.py  words_probs_calculation.py
docker/: Dockerfile  docker-entrypoint.sh
script/: game_play_simulation.py  train_words_prob.py
script/simulator/: game_status.py  wordle_simulator.py
simulator/: wordle_simulator.py  wordy_simulator.py
src/: score_calculator.py  script_initial_words_prob.py  solve_wordle.py  utils.py  words_probs_calculation.py
src/simulator/: game_play_simulation.py  wordle_simulator.py  wordy_simulator.py
wordy/: match_cases.py  score_calculator.py  solve_wordle.py  utils.py  words_probs_calculator.py
wordy/resources/: words_prob.pickle
wordy/simulator/: wordy_simulator.py
