[tool.poetry]
name = "wordy"
version = "0.1.0"
description = ""
authors = ["Aphisit Phankosol <jamemamjame@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "wordy" }
]
